WIP: Panama, java 22, editorconfig, finish delombok